<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2dx Dice</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="d_dice">d</string>
    <string name="roll_button">Roll</string>
    <string name="title_activity_display_roll">DisplayRollActivity</string>
    <string name="roll_output"> None</string>
    <string name="last_roll">Last Roll:</string>
    <string name="save">Save</string>
    <string name="recall">Recall</string>

</resources>
